--- a/index.html
+++ b/index.html
@@ -668,16 +668,17 @@
 
   /* Home Research preview */
   .home-research-preview {
-    padding: 2.5rem;
-    border-radius: 24px;
+    padding: 4.5rem 5rem;
+    border-radius: 34px;
     border: 1px solid rgba(14, 74, 132, 0.12);
     background: #fff;
     box-shadow: 0 30px 70px rgba(15, 23, 42, 0.08);
     text-align: center;
+    margin: 0 auto;
   }
 
   .home-research-media {
-    margin-bottom: 1.5rem;
+    margin-bottom: 2.5rem;
   }
 
   .home-research-media img {
@@ -686,6 +687,8 @@
     max-width: 560px;
     border-radius: 18px;
     box-shadow: 0 20px 60px rgba(15, 23, 42, 0.15);
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .home-research-content {
