--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
   }
 
   .home-research-title {
-    font-size: 1.6rem;
+    font-size: 1.45rem;
     font-weight: 700;
     margin-bottom: 0.75rem;
     color: #000;
@@ -726,6 +726,10 @@
     font-size: 1rem;
     color: #333;
     margin-bottom: 1rem;
+  }
+
+  .home-research-text .home-research-no-wrap {
+    white-space: nowrap;
   }
 
   .home-research-chips {
@@ -986,7 +990,7 @@
 							</div>
 								<div class="home-research-content">
 									<h3 class="home-research-title">Physics-Guided AI for Engineering Simulation &amp; Design</h3>
-									<p class="home-research-text">We build AI models grounded in physical knowledge to speed up simulations, predict future physical behavior, and guide trustworthy design decisions.</p>
+										<p class="home-research-text">We build AI models grounded in physical knowledge to speed up simulations, </br>predict future physical behavior, and guide trustworthy design decisions.</p>
 								<p class="home-research-keyword-label">Research keywords</p>
 									<div class="home-research-chips">
 										<div class="home-research-chip-row">
